--- a/I2Cpp_Task3/I2Cpp_Task3/I2Cpp_Task3.vcxproj.filters
+++ b/I2Cpp_Task3/I2Cpp_Task3/I2Cpp_Task3.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="I2Cpp_Task3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ExpBranch_01.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ExpBranch_01.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
